src/slides/diagram/style.css
.diagram {
  display: grid;
  grid-template-columns: 1fr 1fr; /* Todo: fix according to spec */
  grid-column-gap: 40px;
  align-items: center;
  height: 100%;
  padding: 29px 42px;
  box-sizing: border-box;
}

.diagram__round-chart {}

.diagram__stats {
  margin: auto;
  max-width: 120px;
}

.diagram__total {
  font-weight: 700;
  font-size: 20px;
  line-height: 22px;
  text-align: center;
  color: var(--color-primary_dark);
}

.diagram__diff {
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
  color: var(--color-secondary_dark);
}

.diagram__categories {
  width: 100%;
}

.theme_light .diagram__total {
  color: var(--color-primary_light);
}

.theme_light .diagram__diff {
  color: var(--color-secondary_light);
}

